# inf200

./: IBM Notes Data  README.md.rtf  setup.cfg
EX_03/: test_sorting.py
INF200/inf200_lc/: README.rst  requirements.txt  setup.cfg
INF200/inf200_lc/.github/: ISSUE_TEMPLATE.md
INF200/inf200_lc/src/inf200_lc/: __init__.py
Prosjekter/mysite/mysite/: settings.py
