

[metadata]
name = inf200_lc
keywords=inf200_lc
version = select open_source_license
license = "MIT license",
description = live coding from inf200 lecture at NMBU
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/Fabiannemazi/inf200_lc
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src





[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 88


